--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -136,12 +136,12 @@ h2::selection {
 
 /* project 1 */
 .card:nth-child(1) {
-  background: url(../assets/project/project-one.png) center center/cover;
+  background: url(../assets/project/Logo_LU.webp) center center/cover;
 }
 
 /* Project 2 */
 .card:nth-child(2) {
-  background: url(../assets/project/project-two.png) center center/cover;
+  background: url(../assets/project/logo_sinc.png) center center/cover;
 }
 
 /* Project 3 */
